@@ -225,60 +225,242 @@ _`--processor-path path` or `-processorpath path`_
 `-source release`
 
 - Specifies the **version of source code accepted.**
-    - The following values for release are allowed:
-- Note : Beginning with JDK 9, javac no longer supports `-source` release settings less than or equal to 5.
-    - If settings less than or equal to 5 are used, then the javac command behaves as if -source 6 were specified.
-        - `1.6` No language changes were introduced in Java SE 6.
-            - However, encoding errors in source files are now reported as errors instead of warnings as was done in earlier releases of Java Platform, Standard Edition.
+- The following values for release are allowed:
+    - `1.6` No language changes were introduced in Java SE 6.
+        - However, encoding errors in source files are now reported as errors instead of warnings as was done in earlier releases of Java Platform, Standard Edition.
+    - `6` Synonym for 1.6.
+    - `1.7` The compiler accepts code with features introduced in Java SE 7.
+    - `7` Synonym for 1.7.
+    - `1.8` The compiler accepts code with features introduced in Java SE 8.
+    - `8` Synonym for 1.8.
+    - `9` The compiler accepts code with features introduced in Java SE 9.
+    - `10` The compiler accepts code with features introduced in Java SE 10.
+    - `11` The compiler accepts code with features introduced in Java SE 11.
+        - The default value.
+- _Note : Beginning with JDK 9, javac no longer supports `-source` release settings less than or equal to 5._
+    - _If settings less than or equal to 5 are used, then the javac command behaves as if -source 6 were specified._
 
-6
-Synonym for 1.6.
+`--source-path path or -sourcepath path`
 
-1.7
-The compiler accepts code with features introduced in Java SE 7.
+- Specifies **where to find input source files.**
+    - This is the source code path used to search for class or interface definitions.
+    - As with the user class path, source path entries are separated by colons (`:`) on Oracle Solaris, Linux, and macOS and semicolons (`;`) on Windows.
+    - They can be directories, `JAR` archives, or `ZIP` archives.
+    - If packages are used, then the local path name within the directory or archive must reflect the package name.
+- Note : Classes found through the class path might be recompiled when their source files are also found.
+    - See "Searching for Types".
 
-7
-Synonym for 1.7.
+`--system jdk | none`
 
-1.8
-The compiler accepts code with features introduced in Java SE 8.
+- Overrides the location of system modules.
 
-8
-Synonym for 1.8.
+`-target release`
 
-9
-The compiler accepts code with features introduced in Java SE 9.
+- Generates class files for a specific VM version.
 
-10
-The compiler accepts code with features introduced in Java SE 10.
+`--upgrade-module—path path`
 
-11
-The default value. The compiler accepts code with features introduced in Java SE 11.
+- Overrides the location of upgradeable modules.
 
---source-path path or -sourcepath path
-Specifies where to find input source files. This is the source code path used to search for class or interface definitions. As with the user class path, source path entries are separated by colons (:) on Oracle Solaris, Linux, and macOS and semicolons (;) on Windows. They can be directories, JAR archives, or ZIP archives. If packages are used, then the local path name within the directory or archive must reflect the package name.
+**`-verbose`**
 
-Note:Classes found through the class path might be recompiled when their source files are also found. See Searching for Types.
---system jdk | none
-Overrides the location of system modules.
+- **Outputs messages about what the compiler is doing.**
+    - Messages include information about each class loaded and each source file compiled.
 
--target release
-Generates class files for a specific VM version.
+**`--version` or `-version`**
 
---upgrade-module—path path
-Overrides the location of upgradeable modules.
+- Prints version information.
 
--verbose
-Outputs messages about what the compiler is doing. Messages include information about each class loaded and each source file compiled.
+**`-Werror`**
 
---version or -version
-Prints version information.
-
--Werror
-Terminates compilation when warnings occur.
-
-### Cross-Compilation
+- **Terminates compilation when warnings occur.**
 
 ### Extra
+
+--add-exports module/package=other-module(,other-module)*
+Specifies a package to be considered as exported from its defining module to additional modules or to all unnamed modules when the value of other-module is ALL-UNNAMED.
+
+--add-reads module=other-module(,other-module)*
+Specifies additional modules to be considered as required by a given module.
+
+--default-module-for-created-files module-name
+Specifies the fallback target module for files created by annotation processors, if none is specified or inferred.
+
+-Djava.endorsed.dirs=dirs
+Overrides the location of the endorsed standards path.
+
+Note:This can only be used when compiling for versions prior to JDK 9. As applicable, see the descriptions in --release, -source, or -target for details.
+-Djava.ext.dirs=dirs
+Overrides the location of installed extensions.
+
+Note:This can only be used when compiling for versions prior to JDK 9. As applicable, see the descriptions in --release, -source, or -target for details.
+--doclint-format [html4|html5]
+Specifies the format for documentation comments.
+
+--patch-module module=file(:file)*
+Overrides or augments a module with classes and resources in JAR files or directories.
+
+-Xbootclasspath:path
+Overrides the location of the bootstrap class files.
+
+Note:This can only be used when compiling for versions prior to JDK 9. As applicable, see the descriptions in --release, -source, or -target for details.
+-Xbootclasspath/a:path
+Adds a suffix to the bootstrap class path.
+
+Note:This can only be used when compiling for versions prior to JDK 9. As applicable, see the descriptions in --release, -source, or -target for details.
+-Xbootclasspath/p:path
+Adds a prefix to the bootstrap class path.
+
+Note:This can only be used when compiling for versions prior to JDK 9. As applicable, see the descriptions in --release, -source, or -target for details.
+-Xdiags:[compact, verbose]
+Selects a diagnostic mode.
+
+-Xdoclint
+Enables recommended checks for problems in javadoc comments.
+
+-Xdoclint:(all|none|[-]group)[/access]
+Enables or disables specific groups of checks.
+
+group can have one of the following values:
+
+accessibility
+
+html
+
+missing
+
+reference
+
+syntax
+
+access specifies the minimum visibility level of classes and members that the -Xdoclint option checks. It can have one of the following values (in order of most to least visible):
+
+public
+
+protected
+
+package
+
+private
+
+The default access level is private.
+
+For more information about these groups of checks, see the -Xdoclint option of the javadoc command. The -Xdoclint option is disabled by default in the javac command.
+
+For example, the following option checks classes and members (with all groups of checks) that have the access level of protected and higher (which includes protected and public):
+
+Copy-Xdoclint:all/protected
+The following option enables all groups of checks for all access levels, except it won’t check for HTML errors for classes and members that have the access level of package and higher (which includes package, protected, and public):
+
+Copy-Xdoclint:all,-html/package
+-Xdoclint/package:[-]packages(,[-]package)*
+Enables or disables checks in specific packages. Each package is either the qualified name of a package or a package name prefix followed by a period and asterisk (.*), which expands to all sub-packages of the given package. Each package can be prefixed with a hyphen (-) to disable checks for a specified package or packages.
+
+-Xlint
+Enables all recommended warnings. In this release, enabling all available warnings is recommended.
+
+-Xlint:[-]key(,[-]key)*
+Supplies warnings to enable or disable, separated by a comma (,). Precede a key by a hyphen (-) to disable the specified warning.
+
+Supported values for key are:
+
+all: Enables all warnings.
+
+auxiliaryclass: Warns about an auxiliary class that’s hidden in a source file, and is used from other files.
+
+cast: Warns about the use of unnecessary casts.
+
+classfile: Warns about the issues related to classfile contents.
+
+deprecation: Warns about the use of deprecated items.
+
+dep-ann: Warns about the items marked as deprecated in javadoc but without the @Deprecated annotation.
+
+divzero: Warns about the division by the constant integer 0.
+
+empty: Warns about an empty statement after if.
+
+exports: Warns about the issues regarding module exports.
+
+fallthrough: Warns about the falling through from one case of a switch statement to the next.
+
+finally: Warns about finally clauses that don’t terminate normally.
+
+module: Warns about the module system-related issues.
+
+opens: Warns about the issues related to module opens.
+
+options: Warns about the issues relating to use of command line options.
+
+overloads: Warns about the issues related to method overloads.
+
+overrides: Warns about the issues related to method overrides.
+
+path: Warns about the invalid path elements on the command line.
+
+processing: Warns about the issues related to annotation processing.
+
+rawtypes: Warns about the use of raw types.
+
+removal: Warns about the use of an API that has been marked for removal.
+
+requires-automatic: Warns developers about the use of automatic modules in requires clauses.
+
+requires-transitive-automatic: Warns about automatic modules in requires transitive.
+
+serial: Warns about the serializable classes that don’t provide a serial version ID. Also warns about access to non-public members from a serializable element.
+
+static: Warns about accessing a static member using an instance.
+
+try: Warns about the issues relating to the use of try blocks (that is, try-with-resources).
+
+unchecked: Warns about the unchecked operations.
+
+varargs: Warns about the potentially unsafe vararg methods.
+
+none: Disables all warnings.
+
+See Examples of Using -Xlint keys.
+
+-Xmaxerrs number
+Sets the maximum number of errors to print.
+
+-Xmaxwarns number
+Sets the maximum number of warnings to print.
+
+-Xpkginfo:[always, legacy, nonempty]
+Specifies when and how the javac command generates package-info.class files from package-info.java files using one of the following options:
+
+always
+Generates a package-info.class file for every package-info.java file. This option may be useful if you use a build system such as Ant, which checks that each .java file has a corresponding .class file.
+
+legacy
+Generates a package-info.class file only if package-info.java contains annotations. This option doesn't generate a package-info.class file if package-info.java contains only comments.
+
+Note:A package-info.class file might be generated but be empty if all the annotations in the package-info.java file have RetentionPolicy.SOURCE.
+nonempty
+Generates a package-info.class file only if package-info.java contains annotations with RetentionPolicy.CLASS or RetentionPolicy.RUNTIME.
+
+-Xplugin:name args
+Specifies the name and optional arguments for a plug-in to be run.
+
+-Xprefer:[source, newer]
+Specifies which file to read when both a source file and class file are found for an implicitly compiled class using one of the following options. See Searching for Types.
+
+-Xprefer:newer: Reads the newer of the source or class files for a type (default).
+
+-Xprefer:source: Reads the source file. Use -Xprefer:source when you want to be sure that any annotation processors can access annotations declared with a retention policy of SOURCE.
+
+-Xprint
+Prints a textual representation of specified types for debugging purposes. This doesn’t perform annotation processing or compilation. The format of the output could change.
+
+-XprintProcessorInfo
+Prints information about which annotations a processor is asked to process.
+
+-XprintRounds
+Prints information about initial and subsequent annotation processing rounds.
+
+-Xstdout filename
+Sends compiler messages to the named file. By default, compiler messages go to System.err.
 
 ## Usage
